save -- exception handling addtions