@@ -1,13 +1,13 @@
 #!/usr/bin/env bash
 
-APPNAME="exportbenchmark2"
-COUNT=10000
+#set -o nounset #exit if an unset variable is used
+set -o errexit #exit on any single command fail
 
 # find voltdb binaries in either installation or distribution directory.
 if [ -n "$(which voltdb 2> /dev/null)" ]; then
     VOLTDB_BIN=$(dirname "$(which voltdb)")
 else
-    VOLTDB_BIN="$(dirname $(dirname $(dirname $(pwd))))/bin"
+    VOLTDB_BIN="$(dirname $(dirname $(pwd)))/bin"
     echo "The VoltDB scripts are not in your PATH."
     echo "For ease of use, add the VoltDB bin directory: "
     echo
@@ -16,12 +16,15 @@ else
     echo "to your PATH."
     echo
 fi
+# move voltdb commands into path for this script
+PATH=$VOLTDB_BIN:$PATH
+
 # installation layout has all libraries in $VOLTDB_ROOT/lib/voltdb
 if [ -d "$VOLTDB_BIN/../lib/voltdb" ]; then
     VOLTDB_BASE=$(dirname "$VOLTDB_BIN")
     VOLTDB_LIB="$VOLTDB_BASE/lib/voltdb"
     VOLTDB_VOLTDB="$VOLTDB_LIB"
-    # distribution layout has libraries in separate lib and voltdb directories
+# distribution layout has libraries in separate lib and voltdb directories
 else
     VOLTDB_BASE=$(dirname "$VOLTDB_BIN")
     VOLTDB_LIB="$VOLTDB_BASE/lib"
@@ -29,46 +32,21 @@ else
 fi
 
 APPCLASSPATH=$CLASSPATH:$({ \
-\echo client.jar; \
-\ls -1 "$VOLTDB_VOLTDB"/voltdbclient-*.jar; \
-\ls -1 "$VOLTDB_LIB"/commons-cli-1.2.jar; \
+    \ls -1 "$VOLTDB_VOLTDB"/voltdb-*.jar; \
+    \ls -1 "$VOLTDB_LIB"/*.jar; \
+    \ls -1 "$VOLTDB_LIB"/extension/*.jar; \
 } 2> /dev/null | paste -sd ':' - )
-echo "APPCLASSPATH: " $APPCLASSPATH
-VOLTDB="$VOLTDB_BIN/voltdb"
-LOG4J="$VOLTDB_VOLTDB/log4j.xml"
+CLIENTCLASSPATH=client.jar:$CLASSPATH:$({ \
+    \ls -1 "$VOLTDB_VOLTDB"/voltdbclient-*.jar; \
+} 2> /dev/null | paste -sd ':' - )
+# LOG4J="$VOLTDB_VOLTDB/log4j.xml"
 LICENSE="$VOLTDB_VOLTDB/license.xml"
 HOST="localhost"
 
-# remove build artifacts
+# remove binaries, logs, runtime artifacts, etc... but keep the jars
 function clean() {
-rm -rf obj debugoutput $APPNAME.jar voltdbroot statement-plans catalog-report.html log "$VOLTDB_LIB/ExportBenchmark2.jar"
-}
-
-# Grab the necessary command line arguments
-function parse_command_line() {
-OPTIND=1
-
-while getopts ":h?e:n:" opt; do
-    case "$opt" in
-        e)
-        ARG=$( echo $OPTARG | tr "," "\n" )
-        for e in $ARG; do
-            EXPORTS+=("$e")
-        done
-        ;;
-        n)
-        COUNT=$OPTARG
-        ;;
-    esac
-done
-
-# Return the function to run
-shift $(($OPTIND - 1))
-RUN=$@
-}
-
-function build_deployment_file() {
-exit
+    rm -rf debugoutput voltdbroot log catalog-report.html \
+         statement-plans build/*.class clientbuild/*.class
 }
 
 # remove everything from "clean" as well as the jarfiles
@@ -90,56 +68,94 @@ function jars-ifneeded() {
 }
 
 # run the voltdb server locally
+# note -- use something like this to create the Kafka topic, name
+# matching the name used in the deployment file:
+#   /home/opt/kafka/bin/kafka-topics.sh --zookeeper kafka2:2181 --topic A7_KAFKAEXPORTTABLE2 --partitions 2 --replication-factor 1 --create
 function server() {
     jars-ifneeded
-    # if a catalog doesn't exist, build one
-    # if [ ! -f $APPNAME.jar ]; then catalog; fi
-    FR_TEMP=/tmp/${USER}/fr
-    mkdir -p ${FR_TEMP}
-    # Set up flight recorder options
-    VOLTDB_OPTS="-XX:+UseParNewGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+UseTLAB"
-    VOLTDB_OPTS="${VOLTDB_OPTS} -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly"
-    VOLTDB_OPTS="${VOLTDB_OPTS} -XX:+UnlockCommercialFeatures -XX:+FlightRecorder"
-    VOLTDB_OPTS="${VOLTDB_OPTS} -XX:FlightRecorderOptions=maxage=1d,defaultrecording=true,disk=true,repository=${FR_TEMP},threadbuffersize=128k,globalbuffersize=32m"
-    VOLTDB_OPTS="${VOLTDB_OPTS} -XX:StartFlightRecording=name=${APPNAME}"
-    # truncate the voltdb log
-    [[ -d log && -w log ]] && > log/volt.log
-    # run the server
     echo "Starting the VoltDB server."
+    echo "Remember -- the Kafka topic must exist before launching this test."
     echo "To perform this action manually, use the command line: "
-    echo 
-    echo "VOLTDB_OPTS=\"${VOLTDB_OPTS}\" ${VOLTDB} create -d deployment.xml -l ${LICENSE} -H ${HOST}"
     echo
-    VOLTDB_OPTS="${VOLTDB_OPTS}" ${VOLTDB} create -d deployment.xml -l ${LICENSE} -H ${HOST}
+    echo "voltdb create -d deployment.xml -l $LICENSE -H $HOST"
+    echo
+    voltdb create -d deployment.xml -l $LICENSE -H $HOST
+}
+
+# load schema and procedures
+function init() {
+    jars-ifneeded
+    sqlcmd < ddl.sql
+}
+
+# wait for backgrounded server to start up
+function wait_for_startup() {
+    until sqlcmd  --query=' exec @SystemInformation, OVERVIEW;' > /dev/null 2>&1
+    do
+        sleep 2
+        echo " ... Waiting for VoltDB to start"
+        if [[ $SECONDS -gt 60 ]]
+        then
+            echo "Exiting.  VoltDB did not startup within 60 seconds" 1>&2; exit 1;
+        fi
+    done
+}
+
+# startup server in background and load schema
+function background_server_andload() {
+    jars-ifneeded
+    # run the server in the background
+    voltdb create -B -d deployment.xml -l $LICENSE -H $HOST > nohup.log 2>&1 &
+    wait_for_startup
+    init
 }
 
 # run the client that drives the example
 function client() {
-    run_benchmark
+    async-benchmark
 }
 
-function run_benchmark_help() {
-    java -classpath obj:$APPCLASSPATH:obj exportbenchmark2.ExportBenchmark --help
+# Asynchronous benchmark sample
+# Use this target for argument help
+function async-benchmark-help() {
+    jars-ifneeded
+    java -classpath $CLIENTCLASSPATH exportbenchmark2.client.exportbenchmark.ExportBenchmark --help
 }
 
-function run_benchmark() {
-    java -classpath :$APPCLASSPATH -Dlog4j.configuration=file://$LOG4J \
+# latencyreport: default is OFF
+# Disable the comments to get latency report
+function async-benchmark() {
+    jars-ifneeded
+    java -classpath $CLIENTCLASSPATH \
         exportbenchmark2.client.exportbenchmark.ExportBenchmark \
-        --duration=30 \
-        --servers=localhost \
-	--statsfile=exportbench.csv
+        --displayinterval=5 \
+        --duration=180 \
+        --servers=localhost
 }
 
-function init() {
-    sqlcmd < ddl.sql
+# The following two demo functions are used by the Docker package. Don't remove.
+# compile the jars for procs and client code
+function demo-compile() {
+    jars
+}
+
+function demo() {
+    echo "starting server in background..."
+    background_server_andload
+    echo "starting client..."
+    client
+
+    echo
+    echo When you are done with the demo database, \
+        remember to use \"voltadmin shutdown\" to stop \
+        the server process.
 }
 
 function help() {
-    echo "Usage: ./run.sh {clean|catalog|server|run-benchmark|run-benchmark-help|...}"
+    echo "Usage: ./run.sh {clean|server|init|demo|client|async-benchmark|aysnc-benchmark-help}"
 }
 
-parse_command_line $@
-echo $RUN
 # Run the target passed as the first arg on the command line
 # If no first arg, run server
-if [ -n "$RUN" ]; then $RUN; else server; fi
+if [ $# -gt 1 ]; then help; exit; fi
+if [ $# = 1 ]; then $1; else server; fi
